src/css/glass.css
bw-window:has(bw-glass) {
  bw-pane {
    background-color: transparent;

    &[drop-area]::before {
      z-index: 1;
    }

    &[drop-area='top']::before {
      top: var(--bw-glass-clearance);
      left: var(--bw-glass-clearance);
      right: var(--bw-glass-clearance);
      height: 50%;
    }

    &[drop-area='right']::before {
      top: var(--bw-glass-clearance);
      right: var(--bw-glass-clearance);
      bottom: var(--bw-glass-clearance);
      width: 50%;
    }

    &[drop-area='bottom']::before {
      bottom: var(--bw-glass-clearance);
      left: var(--bw-glass-clearance);
      right: var(--bw-glass-clearance);
      height: 50%;
    }

    &[drop-area='left']::before {
      top: var(--bw-glass-clearance);
      left: var(--bw-glass-clearance);
      bottom: var(--bw-glass-clearance);
      width: 50%;
    }

    &[drop-area='center']::before {
      inset: var(--bw-glass-clearance);
    }
  }

  bw-muntin {
    background-color: transparent;
  }
}

bw-glass {
  position: absolute;
  inset: var(--bw-glass-clearance);
  display: flex;
  flex-direction: column;
  border: 1px solid var(--bw-glass-border-color);
  border-radius: var(--bw-glass-border-radius);
  font-family: var(--bw-font-family);
  font-size: var(--bw-font-size);
  box-sizing: border-box;

  &[draggable='true']:active {
    cursor: move;
    opacity: 0.4;
  }
}

bw-glass-header {
  box-sizing: border-box;
  flex-basis: var(--bw-glass-header-height);
  flex-shrink: 0;
  display: flex;
  align-items: center;
  /* Prevent native text-select/drag while dragging the header */
  user-select: none;
  gap: var(--bw-glass-header-gap);
  overflow: hidden;
  padding-inline: var(--bw-glass-header-gap);
  border-bottom: 1px solid var(--bw-glass-border-color);
  border-top-left-radius: var(--bw-glass-border-radius);
  border-top-right-radius: var(--bw-glass-border-radius);
  background-color: var(--bw-glass-header-bg-color);

  anchor-scope: --bw-action-menu;
}

bw-glass-title {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

bw-glass-tab-container {
  align-self: flex-end;
  display: flex;
  gap: var(--bw-glass-header-gap);
}

.bw-glass-tab {
  font-family: var(--bw-font-family);
  border: 1px solid var(--bw-glass-border-color);
  border-bottom: none;
  border-top-left-radius: var(--bw-glass-border-radius);
  border-top-right-radius: var(--bw-glass-border-radius);
  cursor: pointer;

  &:hover {
    background-color: var(--bw-action-button-bg-color-hover);
  }

  &:active {
    transform: translateY(1px);
  }
}

bw-glass-content {
  display: block;
  box-sizing: border-box;
  overflow: auto;
  flex-grow: 1;
  color: var(--bw-font-color);
  background-color: var(--bw-glass-bg-color);
  border-bottom-left-radius: var(--bw-glass-border-radius);
  border-bottom-right-radius: var(--bw-glass-border-radius);
}

